--- a/frontend/admin-panel/src/index.css
+++ b/frontend/admin-panel/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -13,5 +14,16 @@ code {
 }
 
 #root {
+  height: 100%;
+}
+
+a:active,
+a:hover,
+a {
+  text-decoration: none;
+  color: #000;
+}
+
+html, body, #app, #app>div {
   height: 100%;
 }
